[FIX] Hp logo and Badge not showing

--- a/src/frontend/components/UI/TopNavBar/index.module.scss
+++ b/src/frontend/components/UI/TopNavBar/index.module.scss
@@ -67,7 +67,7 @@
   min-width: calc(1.3 * var(--text-xs));
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 800px) {
   .alphaBadge,
   .hpTextLogo {
     display: none;
